_build/html/reports/notebooks/Untitled.err.log
Traceback (most recent call last):
  File "/Users/tompkins/Library/Python/3.9/lib/python/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/tompkins/Library/Python/3.9/lib/python/site-packages/nbclient/client.py", line 1265, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/tompkins/Library/Python/3.9/lib/python/site-packages/jupyter_core/utils/__init__.py", line 166, in wrapped
    return loop.run_until_complete(inner)
  File "/Library/Developer/CommandLineTools/Library/Frameworks/Python3.framework/Versions/3.9/lib/python3.9/asyncio/base_events.py", line 642, in run_until_complete
    return future.result()
  File "/Users/tompkins/Library/Python/3.9/lib/python/site-packages/nbclient/client.py", line 703, in async_execute
    await self.async_execute_cell(
  File "/Users/tompkins/Library/Python/3.9/lib/python/site-packages/nbclient/client.py", line 1021, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/tompkins/Library/Python/3.9/lib/python/site-packages/nbclient/client.py", line 915, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
# What is a black body?

$
B_\lambda(T) \equiv L_\lambda(T) = \frac{2 h c^2}{\lambda^5 (e^\frac{c h}{k \lambda T} -1)}
\label{eqn:planck_lam}
$
------------------

[0;36m  Cell [0;32mIn[2], line 3[0;36m[0m
[0;31m    $[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (4165630560.py, line 3)

